--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-tools": "^10.9.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.1",
